--- a/src/main/resources/templates/login/loginForm.html
+++ b/src/main/resources/templates/login/loginForm.html
@@ -24,7 +24,7 @@
 <br/>
 
 <div class="container">
-    <h2>ログインフォーム</h2>
+    <h2>ログイン</h2>
 
     <div th:if="${param.error}" class="alert alert-danger">
         ユーザー名またはパスワードが正しくありません。
